# MISIS_LABS

./: README.md  students.csv
data/: asd.json  ex.xlsx  qwe.csv  students.json
data/lab_09/: students.csv
src/: lib.py  test  test.py
src/labs/lab_01/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py
src/labs/lab_02/: A.py
src/labs/lab_05/: A-B.py  README.md
src/labs/lab_06/: README.md  cli_convert.py  cli_text.py
src/labs/lab_07/: README.md
src/labs/lab_08/: README.md  models.py  serialize.py
src/labs/lab_09/: README.md  group.py
src/labs/lab_10/: README.md  linked_list.py  structures.py
tests_lab_07/: lib_02.py  pyproject.toml  test_utils.py
